# btalk

./: .gitignore  .nvimrc  CMakeLists.txt  config.cmake  config.h.in
soc/: CMakeLists.txt  ConfigSysClk.h  _syscalls.c  bt.c  bt_uart.c  chipsel.h  crc.c  crc.h  flash.c  flash.h  soc.c  startup_M480.S
soc/I94100_BSP_V3.05.002/SampleCode/Semihost/KEIL/: Semihost.uvopt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/: __DailyBuild_I94100_Nuvoton_Sample_Driver.mws
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/CLK_ClockDetector/: ConfigSysClk.h  main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/CRC_CCITT/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/CRC_CRC32/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/DMIC_DPWM/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/DMIC_DPWM_PDMA/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/DPWM/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/EADC_ResultMonitor/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/EADC_SWTRG_Trigger/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/EADC_Timer_Trigger/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/FMC_MultiWordProgram/: multi_word_prog.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/GPIO_EINTAndDebounce/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/GPIO_INT/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/GPIO_OutputInput/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/GPIO_PowerDown/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2C_GCMode_Master/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2C_GCMode_Slave/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2C_SMBus/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2C_Wakeup_Master/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2C_Wakeup_Slave/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2S_DPWM_85L40/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2S_Master/: ConfigSysClk.h  main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/I2S_Slave_DPWM/: ConfigSysClk.h  main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/ISP_HID/: hid_trans.c  hid_trans.h  startup_I94100.s  targetdev.h
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/ISP_UART/: isp_user.c  targetdev.c  targetdev.h
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/PDMA_Control/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/PDMA_ScatterGather_PingPongBuffer/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/PWM_Capture/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/PWM_DeadZone/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/PWM_DoubleBuffer/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/RTC_AlarmWakeup/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/RTC_TimeAndTick/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SPI_I2S_Master/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SPI_I2S_Slave/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SPI_Loopback/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SPI_MasterSlave/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SPI_PDMA_MasterSlave/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SPI_QuadFlash/: ConfigSysClk.h  SPIFlash.c  SPIFlash.h  main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SYS_DPDMode_Wakeup/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SYS_PLLClockOutput/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SYS_SPDMode_Wakeup/: main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/SYS_TrimHIRC/: SysClk.h  hid_request.c  hid_request.h  main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/TIMER_Delay/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/TIMER_EventCounter/: ConfigSysClk.h  main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/UART_PDMA/: main.c  readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/UART_TxRxFunction/: readme.txt
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/USBD_HID_Mouse/: descriptors.c  hid_mouse.c  hid_mouse.h
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/USBD_HID_Transfer/: hid_transdesc.c  main.c
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/USBD_MTP/: ConfigSysClk.h  main.c  mtp.h
soc/I94100_BSP_V3.05.002/SampleCode/StdDriver/USBD_MassStorage_DataFlash/: fat.h  main.c  readme.txt  usbd_bot.h  usbd_scsi.c
soc/i94100/: CMakeLists.txt  bt.c  bt_uart.c  config.cmake  flash.c  soc_config.h
soc/include/: bt_uart.h  soc.h
soc/sim/: CMakeLists.txt  bt.c  config.cmake  flash.c  soc.c
src/: CMakeLists.txt  app.c  app.h  app_echo.c  app_echo.h  app_l2cap.c  app_l2cap.h  app_led.c  app_led.h  app_private.h  conn.c  conn.h  high_pass_filter.c  high_pass_filter.h  main.c  resampler.c  resampler.h
(+390 files in other folders)
